Accessibility Fixes
2 Things:
1. Allows the alerts/status boxes to not appear on screen when using keyboard-only mode w/ screen readers
2. Fixes quick "offscreen" bug where I forgot to put "px" in the values

--- a/hx_lti_initializer/static/css/base.css
+++ b/hx_lti_initializer/static/css/base.css
@@ -1307,3 +1307,10 @@ progress[value]::-webkit-progress-value {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+/* accessibility */
+#hxat-alert, #hat-status, #text-content-notifications {
+    float: left;
+    margin-top: -999999px;
+    margin-left: -999999px;
+}
